--- a/jfxShopping/userinfo_wish.html
+++ b/jfxShopping/userinfo_wish.html
@@ -499,7 +499,7 @@
                 </div>-->
             </div>
             <div class="text-right h4 wishTotal">Total: <b>￥0</b></div>
-            <div><button class="js" data-target="#buytolist" data-toggle="modal">结算</button></div>
+            <div><button class="js" data-toggle="modal" onclick="getPayList()">结算</button></div>
             <div class="text-left shownum">显示 <b>条</b></div>
         </div>
         <div id="buytolist" class="modal">
@@ -511,7 +511,7 @@
                     <div class="modal-content sureShopListwidth">
                         <div class="sureShopList">
                             <ul class="d-flex flex-column flex-nowrap">
-                                <li class="d-flex flex-nowrap flex-row justify-content-start border-top border-bottom py-1">
+                                <!--<li class="d-flex flex-nowrap flex-row justify-content-start border-top border-bottom py-1">
                                     <img src="images/products/BW20G33Z1D001-01/BW20G33Z1D001-01-01.jpg"/>
                                     <div class="pl-4 pt-4">
                                         <ul class="shopInfo">
@@ -526,13 +526,13 @@
                                         <li class='address p-0 m-0 text-muted'>"+result[i].cityname+"<br />"+result[i].address+"</li>
                                         <li class='phone text-muted'>电话：<span>"+result[i].phone+"</span></li>
                                     </ul>
-                                </li>
+                                </li>-->
                             </ul>
                         </div>
                         <div class="text-right h4 wishTotal">Total: <b>￥0</b></div>
                         <span class="d-none p_idlist"></span>
                         <div class="text-center">
-                            <button onclick="getPayList()">支付</button>
+                            <button onclick="userPay()">支付</button>
                         </div>
                     </div>
                 </div>
