--- a/jfxShopping/userinfo_person.html
+++ b/jfxShopping/userinfo_person.html
@@ -497,7 +497,7 @@
                         <div class="d-flex flex-column">
                             <span class="emailreg_msg">请输入您的电子邮箱地址</span>
                             <label for="emailreg" class="inputnotice" id="emailnotice">电子邮箱地址*</label>
-                            <input type="text" value="asd" id="emailreg" onfocus="ckfocus('#emailnotice','10%','.5rem')"
+                            <input type="text" value="asd" id="emailreg" disabled onfocus="ckfocus('#emailnotice','10%','.5rem')"
                                 onblur="ckblur('#emailnotice','55%','1rem','#emailreg')" />
                         </div>
                         <div class="d-flex flex-column">
